third init added local db+ repo + menu tg

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 bot.name=viewing diary
 bot.token=6113607818:AAGNZDVHYOfTgU6RumGt4mKr3Eb_wwSNyi8
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/bot_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql= true
+server.error.whitelabel.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
