--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql= true
 server.error.whitelabel.enabled=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate = true
