seventh init repair the code back to commit 89e5429

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 bot.name=viewing diary
 bot.token=6113607818:AAGNZDVHYOfTgU6RumGt4mKr3Eb_wwSNyi8
 bot.owner=1038776284
-cron.scheduler=0 * * * * *
+cron.scheduler=* * 0 * * *
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/bot_db
 spring.datasource.username=postgres
